# point-in-polygon-service

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  bootstrap.py  config.toml  pyproject.toml  render.yaml
.claude/agents/: adversarial-reviewer.md
.github/workflows/: ci.yml
app/: config.py  errors.py  lookup.py  main.py  models.py
app/geocoding/: arcgis.py  base.py  census.py  chain.py  local_points.py  nominatim.py  normalize.py  registry.py
data/: layers.gpkg
docs/: conventions.md  data-provenance.md  deployment.md  pr-review.md  testing.md
docs/plans/: PLAN.md
docs/plans/v1.0-archive/: PLAN.md
docs/specs/: SPEC.md
scripts/: build_data.py  check_no_secrets.py
static/: app.js  index.html  style.css
tests/: test_api.py  test_census.py  test_chain.py  test_data.py  test_geocoding_arcgis.py  test_local_points.py  test_lookup.py  test_nominatim.py  test_normalize.py  test_offline.py
